Fix EventDetailHero RSVP input form text align

--- a/src/components/EventDetailHero/EventDetailHero.scss
+++ b/src/components/EventDetailHero/EventDetailHero.scss
@@ -88,4 +88,11 @@
       margin: spacing(8);
     }
   }
+
+  &__text-field {
+    input {
+      padding-top: calc(#{spacing(4)} + 0.125rem);
+      padding-bottom: calc(#{spacing(4)} - 0.125rem);
+    }
+  }
 }
